test_rigs/example-aws/aws_configs/us-west-2/SecurityGroups.json
{
 "SecurityGroups": [
  {
   "Description": "Arista Demo Topology", 
   "GroupId": "sg-331ad04e", 
   "GroupName": "Arista Demo", 
   "IpPermissions": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "192.168.0.0/16", 
       "Description": "ALL traffic within the VPC"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }, 
    {
     "FromPort": 22, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "38.140.26.4/32"
      }, 
      {
       "CidrIp": "38.140.26.5/32"
      }, 
      {
       "CidrIp": "38.140.26.6/32"
      }, 
      {
       "CidrIp": "38.140.26.7/32"
      }, 
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 22, 
     "UserIdGroupPairs": []
    }, 
    {
     "FromPort": -1, 
     "IpProtocol": "icmp", 
     "IpRanges": [
      {
       "CidrIp": "38.140.26.0/24"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": -1, 
     "UserIdGroupPairs": []
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "Tags": [
    {
     "Key": "Name", 
     "Value": "Arista Demo"
    }
   ], 
   "VpcId": "vpc-b390fad5"
  },
  {
   "Description": "RDS VPC security group",
   "GroupId": "sg-55510831",
   "GroupName": "default",
   "IpPermissions": [
    {
     "FromPort": 3306,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "10.193.0.0/16",
       "Description": "Internal traffic"
      },
      {
       "CidrIp": "107.170.243.58/32",
       "Description": "inentionet-test"
      },
      {
       "CidrIp": "104.236.156.171/32",
       "Description": "intentionet-dev"
      },
      {
       "CidrIp": "162.243.144.192/32",
       "Description": "intentionet-web"
      },
      {
       "CidrIp": "67.170.86.87/32",
       "Description": "surf"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 3306,
     "UserIdGroupPairs": [
      {
       "Description": "jump host",
       "GroupId": "sg-cf3f86b3",
       "UserId": "118292266645"
      }
     ]
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "118292266645",
   "Tags": [
    {
     "Key": "Name",
     "Value": "Default+RDS-sg"
    }
   ],
   "VpcId": "vpc-b390fad5"
  },
  {
   "Description": "default VPC security group", 
   "GroupId": "sg-3dfb3140", 
   "GroupName": "default", 
   "IpPermissions": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-3dfb3140", 
       "UserId": "118292266645"
      }
     ]
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "VpcId": "vpc-b390fad5"
  },  
  {
   "Description": "launch-wizard-2 created 2015-11-22T18:20:09.343-08:00", 
   "GroupId": "sg-6c4d1408", 
   "GroupName": "launch-wizard-2", 
   "IpPermissions": [
    {
     "FromPort": 80, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 80, 
     "UserIdGroupPairs": []
    }, 
    {
     "FromPort": 22, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 22, 
     "UserIdGroupPairs": []
    }, 
    {
     "FromPort": 443, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 443, 
     "UserIdGroupPairs": []
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "VpcId": "vpc-f8fad69d"
  }, 
  {
   "Description": "launch-wizard-8 created 2017-09-21T12:31:56.756-07:00", 
   "GroupId": "sg-83b348fe", 
   "GroupName": "launch-wizard-8", 
   "IpPermissions": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "10.0.0.0/16"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }, 
    {
     "FromPort": 22, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 22, 
     "UserIdGroupPairs": []
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "VpcId": "vpc-925131f4"
  }, 
  {
   "Description": "launch-wizard-6 created 2017-09-20T20:50:23.815-07:00", 
   "GroupId": "sg-94df21e9", 
   "GroupName": "launch-wizard-6", 
   "IpPermissions": [
    {
     "FromPort": 80, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [
      {
       "CidrIpv6": "::/0"
      }
     ], 
     "PrefixListIds": [], 
     "ToPort": 80, 
     "UserIdGroupPairs": []
    }, 
    {
     "FromPort": 22, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 22, 
     "UserIdGroupPairs": []
    }, 
    {
     "FromPort": 443, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [
      {
       "CidrIpv6": "::/0"
      }
     ], 
     "PrefixListIds": [], 
     "ToPort": 443, 
     "UserIdGroupPairs": []
    }, 
    {
     "FromPort": -1, 
     "IpProtocol": "icmp", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0", 
       "Description": "ICMP ALL"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": -1, 
     "UserIdGroupPairs": []
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "Tags": [
    {
     "Key": "Name", 
     "Value": ""
    }
   ], 
   "VpcId": "vpc-925131f4"
  }, 
  {
   "Description": "Created from the RDS Management Console", 
   "GroupId": "sg-9a1f3ffe", 
   "GroupName": "rds-launch-wizard", 
   "IpPermissions": [
    {
     "FromPort": 3306, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 3306, 
     "UserIdGroupPairs": []
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "VpcId": "vpc-f8fad69d"
  }, 
  {
   "Description": "launch-wizard-3 created 2017-07-27T00:40:28.313-07:00", 
   "GroupId": "sg-a30183d9", 
   "GroupName": "launch-wizard-3", 
   "IpPermissions": [
    {
     "FromPort": 22, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "71.231.80.18/32"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 22, 
     "UserIdGroupPairs": []
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "VpcId": "vpc-f8fad69d"
  }, 
  {
   "Description": "default VPC security group", 
   "GroupId": "sg-adcd87d0", 
   "GroupName": "default", 
   "IpPermissions": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "Tags": [
    {
     "Key": "Name", 
     "Value": "GNS3-BGP-Test-Default"
    }
   ], 
   "VpcId": "vpc-815775e7"
  }, 
  {
   "Description": "launch-wizard-1 created 2015-11-22T17:47:39.496-08:00", 
   "GroupId": "sg-bb550cdf", 
   "GroupName": "launch-wizard-1", 
   "IpPermissions": [
    {
     "FromPort": 80, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 80, 
     "UserIdGroupPairs": []
    }, 
    {
     "FromPort": 22, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 22, 
     "UserIdGroupPairs": []
    }, 
    {
     "FromPort": 443, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 443, 
     "UserIdGroupPairs": []
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "VpcId": "vpc-f8fad69d"
  }, 
  {
   "Description": "default VPC security group", 
   "GroupId": "sg-eed02393", 
   "GroupName": "default", 
   "IpPermissions": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-eed02393", 
       "UserId": "118292266645"
      }
     ]
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "VpcId": "vpc-925131f4"
  }
 ]
}
